Fix overlap of menu on kitchen description

--- a/app/assets/stylesheets/kitchen_profile.scss
+++ b/app/assets/stylesheets/kitchen_profile.scss
@@ -71,6 +71,7 @@
   border-radius: 40px;
   color: white;
   background-image: asset-url("cutting-board.png");
+  margin-top: 10px;
 }
 
 .kitchen-profile-lower-right {
@@ -87,6 +88,7 @@
   color: white;
   background-image: asset-url("menu.jpg");
   background-size: cover;
+  margin-top: 10px;
 }
 
 .kitchen-profile-location-map {
